--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
-title: design-thinking-phase-one-empathy
+title: "Design Thinking: Phase One - Empathy"
+tagline: Learn how to use the first phase of Design Thinking, Empathy, to create innovative solutions for your projects.
 description: >-
-  This course will teach you the principles of Design Thinking and walk you
-  through the first phase, Empathy.
+  Design Thinking is a human-centric approach to creating solutions.  This course will teach you the principles of Design Thinking and walk you through how to apply the first phase, empathy, to your projects.
 template:
   repo: design-thinking-phase-one-empathy-template
   name: design-thinking-phase-one-empathy
