--- a/config.yml
+++ b/config.yml
@@ -19,13 +19,26 @@ preferences:
         value: all
         selected: true
 before:
+  - type: updateBranchProtection
   - type: createIssue
     title: Welcome!
-    body: 01_welcome-issue.md
+    body: welcome-issue.md
+    comments:
+    - turn-on-gh-pages.md
 steps:
-  - title: First step
-    description: The first step in your course
-    event: issues.assigned
-    link: '{{ repoUrl }}'
-    actions:
-      - type: closeIssue
+  # 1
+  - title: Turn on GitHub Pages
+  description: Turn on GitHub Pages in the settings page of the repository.
+  event: page_build
+  link: '{{ repoUrl }}/issues/1'
+  actions:
+  - type: octokit
+    method: repos.getPages
+    owner: '%payload.repository.owner.login%'
+    repo: '%payload.repository.name%'
+    action_id: pagesUrl
+  - type: respond
+    issue: Design Thinking: Phase One - Empathy
+    with: close-issue.md
+    data:
+      pagesUrl: '%actions.pagesUrl.data.html_url%'
