comment out preferences

--- a/config.yml
+++ b/config.yml
@@ -5,19 +5,21 @@ description: >-
 template:
   repo: design-thinking-phase-one-empathy-template
   name: design-thinking-phase-one-empathy
-preferences:
-  - type: radio
-    name: teamRole
-    label: Select your role
-    description: Select your role to see tailored content.
-    options:
-      - label: Developer
-        value: dev
-      - label: Project Manager
-        value: pm
-      - label: No specific role
-        value: all
-        selected: true
+
+#  preferences:
+#  - type: radio
+#    name: teamRole
+#    label: Select your role
+#    description: Select your role to see tailored content.
+#    options:
+#      - label: Developer
+#        value: dev
+#      - label: Project Manager
+#        value: pm
+#      - label: No specific role
+#        value: all
+#        selected: true
+
 before:
   - type: updateBranchProtection
   - type: createIssue
@@ -42,3 +44,5 @@ steps:
     with: close-issue.md
     data:
       pagesUrl: '%actions.pagesUrl.data.html_url%'
+
+  # 2
