--- a/config.yml
+++ b/config.yml
@@ -26,7 +26,7 @@ before:
     title: Welcome!
     body: welcome-issue.md
     comments:
-    - turn-on-gh-pages.md
+      - turn-on-gh-pages.md
 steps:
   # 1
   - title: Turn on GitHub Pages
@@ -40,7 +40,7 @@ steps:
       repo: '%payload.repository.name%'
       action_id: pagesUrl
     - type: respond
-      issue: Design Thinking: Phase One - Empathy
+      issue: Design Thinking Phase One - Empathy
       with: close-issue.md
       data:
         pagesUrl: '%actions.pagesUrl.data.html_url%'
