--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 
-title: Design Thinking Phase One - Empathize
+title: Introduction to Design Thinking 
 description: Design Thinking is a human-centric approach to creating solutions.  This course will teach you the principles of Design Thinking and walk you through applying the first phase, empathize, to your projects. 
 template:
   name: design-thinking-intro
