--- a/config.yml
+++ b/config.yml
@@ -33,8 +33,8 @@ before:
 # branch empathy:
 # - empathy/README.md
 
-# branch define:
-# - define/README.md
+# branch ideate:
+# - ideate/README.md
 
 # branch prototype:
 # - prototype/README.md
@@ -49,7 +49,7 @@ before:
 # +- README.md
 # + empathy
 # +- README.md
-# + define
+# + ideate
 # +- README.md
 # + prototype
 # +- README.md
@@ -156,7 +156,7 @@ steps:
 #    required: false
   - type: createPullRequest
     title: Define
-    head: define
+    head: ideate
     body: 07_define.md
     action_id: definePR
   - type: respond
